fixing production iphone styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -198,6 +198,9 @@ body {
 
 @media only screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) {
   .site {
+    position: absolute;
+    top: 0;
+    bottom: 0;
     grid-template-columns: 1fr;
     grid-gap: 0;
     justify-content: center;
@@ -222,14 +225,14 @@ body {
     display: none;
   }
   .main > .title {
-    transform: translateY(-2rem);
+    transform: translateY(-3rem);
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   .main > p {
-    transform: translateY(-2rem);
+    transform: translateY(-3rem);
     font-size: 0.7rem;
-    margin: 0 1rem 2rem 1rem;
+    margin: 0 1rem 0 1rem;
   }
   .main > ul {
     transform: translateY(-2rem);
