--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -121,6 +121,7 @@
   .BrainhubCarousel {
     z-index: 10000;
     overflow: hidden;
+    bottom: 10vh;
   }
   .BrainhubCarousel li.BrainhubCarouselItem {
     width: 150px !important;
